org-antlr-works-editor/src/org/antlr/works/editor/st4/experimental/TemplateParser.java
// $ANTLR ANTLRVersion> TemplateParser.java generatedTimestamp>
package org.antlr.works.editor.st4.experimental;
/*
 *  Copyright (c) 2012 Sam Harwell, Tunnel Vision Laboratories LLC
 *  All rights reserved.
 *
 *  The source code of this document is proprietary work, and is not licensed for
 *  distribution. For information about licensing, contact Sam Harwell at:
 *      sam@tunnelvisionlabs.com
 */

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

public class TemplateParser extends Parser<Token> {
	public static final int
		DELIMITERS=22, LBRACK=13, BigStringLineTemplate_PERCENT=53, REGION_END=48, 
		LBRACE=15, EQUALS=11, NOT=43, ID=25, AND=45, LPAREN=5, IF=37, AT=12, QUOTE=3, 
		RPAREN=6, IMPORT=19, ESCAPE=47, COMMA=7, BIGSTRING=26, ENDIF=39, ANYCHAR=30, 
		PIPE=33, CLOSE_DELIMITER=2, SUPER=36, TEMPLATE_PARAMETER=32, DOT=8, COMMENT=29, 
		RBRACK=14, RBRACE=16, LINE_COMMENT=28, OPEN_DELIMITER=1, DEFINED=10, DEFAULT=18, 
		ELSE=40, ELLIPSIS=42, TEXT=31, TRUE=20, SEMI=46, BigStringLineTemplate_END=35, 
		ELSEIF=38, DelimitersOpenSpec_DELIMITER_STRING=50, COLON=9, GROUP=17, 
		WS=23, NEWLINE=24, BIGSTRINGLINE=27, OR=44, StringTemplate_END=54, REGION_ID=49, 
		DelimitersCloseSpec_DELIMITER_STRING=51, END=41, FALSE=21, BigStringTemplate_LANGLE=52, 
		STRING=4, BigStringTemplate_END=34;
	public static final String[] tokenNames = {
		"<INVALID>", "OPEN_DELIMITER", "CLOSE_DELIMITER", "QUOTE", "STRING", "'('", 
		"')'", "','", "'.'", "':'", "'::='", "'='", "'@'", "'['", "']'", "LBRACE", 
		"'}'", "'group'", "'default'", "'import'", "'true'", "'false'", "DELIMITERS", 
		"WS", "NEWLINE", "ID", "'<<'", "'<%'", "LINE_COMMENT", "COMMENT", "ANYCHAR", 
		"TEXT", "TEMPLATE_PARAMETER", "'|'", "'>>'", "'%>'", "'super'", "'if'", 
		"'elseif'", "'endif'", "'else'", "'end'", "'...'", "'!'", "'||'", "'&&'", 
		"';'", "ESCAPE", "'@end'", "REGION_ID", "DelimitersOpenSpec_DELIMITER_STRING", 
		"DelimitersCloseSpec_DELIMITER_STRING", "'>'", "'%'", "'\"'"
	};
	public static final int
		RULE_group = 0, RULE_oldStyleHeader = 1, RULE_groupName = 2, RULE_delimiters = 3, 
		RULE_def = 4, RULE_templateDef = 5, RULE_formalArgs = 6, RULE_formalArg = 7, 
		RULE_dictDef = 8, RULE_dict = 9, RULE_dictPairs = 10, RULE_defaultValuePair = 11, 
		RULE_keyValuePair = 12, RULE_keyValue = 13, RULE_string = 14, RULE_stringTemplate = 15, 
		RULE_bigstringTemplate = 16, RULE_bigstringTemplateNoNewline = 17, RULE_anonymousTemplate = 18, 
		RULE_anonymousTemplateParameters = 19, RULE_templateBody = 20, RULE_escape = 21, 
		RULE_exprTag = 22, RULE_region = 23, RULE_subtemplate = 24, RULE_ifstat = 25, 
		RULE_conditional = 26, RULE_andConditional = 27, RULE_notConditional = 28, 
		RULE_exprOptions = 29, RULE_option = 30, RULE_exprNoComma = 31, RULE_expr = 32, 
		RULE_mapExpr = 33, RULE_mapTemplateRef = 34, RULE_memberExpr = 35, RULE_includeExpr = 36, 
		RULE_primary = 37, RULE_arguments = 38, RULE_argExprList = 39, RULE_arg = 40, 
		RULE_namedArg = 41, RULE_list = 42, RULE_listElement = 43;
	public static final String[] ruleNames = {
		"group", "oldStyleHeader", "groupName", "delimiters", "def", "templateDef", 
		"formalArgs", "formalArg", "dictDef", "dict", "dictPairs", "defaultValuePair", 
		"keyValuePair", "keyValue", "string", "stringTemplate", "bigstringTemplate", 
		"bigstringTemplateNoNewline", "anonymousTemplate", "anonymousTemplateParameters", 
		"templateBody", "escape", "exprTag", "region", "subtemplate", "ifstat", 
		"conditional", "andConditional", "notConditional", "exprOptions", "option", 
		"exprNoComma", "expr", "mapExpr", "mapTemplateRef", "memberExpr", "includeExpr", 
		"primary", "arguments", "argExprList", "arg", "namedArg", "list", "listElement"
	};

	@Override
	public String getGrammarFileName() { return "TemplateParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	public TemplateParser(TokenStream<? extends Token> input) {
		super(input);
		_interp = new ParserATNSimulator<Token>(this,_ATN);
	}
	public static class GroupContext extends ParserRuleContext<Token> {
		public OldStyleHeaderContext oldStyleHeader() {
			return getRuleContext(OldStyleHeaderContext.class,0);
		}
		public List<? extends DefContext> def() {
			return getRuleContexts(DefContext.class);
		}
		public DelimitersContext delimiters() {
			return getRuleContext(DelimitersContext.class,0);
		}
		public List<? extends StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public DefContext def(int i) {
			return getRuleContext(DefContext.class,i);
		}
		public GroupContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitGroup(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitGroup(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final GroupContext group() throws RecognitionException {
		GroupContext _localctx = new GroupContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_group);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(88); oldStyleHeader();
				}
				break;
			}
			setState(92);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(91); delimiters();
				}
				break;
			}
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(94); match(IMPORT);
					setState(95); string();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(102); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(101); def();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(104); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OldStyleHeaderContext extends ParserRuleContext<Token> {
		public TerminalNode<Token> ID(int i) {
			return getToken(TemplateParser.ID, i);
		}
		public List<? extends TerminalNode<Token>> ID() { return getTokens(TemplateParser.ID); }
		public OldStyleHeaderContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oldStyleHeader; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterOldStyleHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitOldStyleHeader(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitOldStyleHeader(this);
			else return null;
		}
	}

	@RuleVersion(1)
	public final OldStyleHeaderContext oldStyleHeader() throws RecognitionException {
		OldStyleHeaderContext _localctx = new OldStyleHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_oldStyleHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(GROUP);
			setState(107); match(ID);
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(108); match(COLON);
				setState(109); match(ID);
				}
				break;
			}
			setState(112); match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupNameContext extends ParserRuleContext<Token> {
		public TerminalNode<Token> ID(int i) {
			return getToken(TemplateParser.ID, i);
		}
		public List<? extends TerminalNode<Token>> ID() { return getTokens(TemplateParser.ID); }
		public GroupNameContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupName; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterGroupName(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitGroupName(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitGroupName(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final GroupNameContext groupName() throws RecognitionException {
		GroupNameContext _localctx = new GroupNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_groupName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(ID);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(115); match(DOT);
					setState(116); match(ID);
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelimitersContext extends ParserRuleContext<Token> {
		public TerminalNode<Token> DelimitersOpenSpec_DELIMITER_STRING() { return getToken(TemplateParser.DelimitersOpenSpec_DELIMITER_STRING, 0); }
		public TerminalNode<Token> DELIMITERS() { return getToken(TemplateParser.DELIMITERS, 0); }
		public TerminalNode<Token> DelimitersCloseSpec_DELIMITER_STRING() { return getToken(TemplateParser.DelimitersCloseSpec_DELIMITER_STRING, 0); }
		public DelimitersContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delimiters; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterDelimiters(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitDelimiters(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitDelimiters(this);
			else return null;
		}
	}

	@RuleVersion(1)
	public final DelimitersContext delimiters() throws RecognitionException {
		DelimitersContext _localctx = new DelimitersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_delimiters);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(DELIMITERS);
			setState(123); match(DelimitersOpenSpec_DELIMITER_STRING);
			setState(124); match(COMMA);
			setState(125); match(DelimitersCloseSpec_DELIMITER_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext<Token> {
		public DictDefContext dictDef() {
			return getRuleContext(DictDefContext.class,0);
		}
		public TemplateDefContext templateDef() {
			return getRuleContext(TemplateDefContext.class,0);
		}
		public DefContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitDef(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitDef(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_def);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127); templateDef();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128); dictDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateDefContext extends ParserRuleContext<Token> {
		public Token enclosing;
		public Token name;
		public Token alias;
		public Token target;
		public StringTemplateContext stringTemplate() {
			return getRuleContext(StringTemplateContext.class,0);
		}
		public BigstringTemplateNoNewlineContext bigstringTemplateNoNewline() {
			return getRuleContext(BigstringTemplateNoNewlineContext.class,0);
		}
		public TerminalNode<Token> ID(int i) {
			return getToken(TemplateParser.ID, i);
		}
		public List<? extends TerminalNode<Token>> ID() { return getTokens(TemplateParser.ID); }
		public BigstringTemplateContext bigstringTemplate() {
			return getRuleContext(BigstringTemplateContext.class,0);
		}
		public FormalArgsContext formalArgs() {
			return getRuleContext(FormalArgsContext.class,0);
		}
		public TemplateDefContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateDef; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterTemplateDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitTemplateDef(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitTemplateDef(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final TemplateDefContext templateDef() throws RecognitionException {
		TemplateDefContext _localctx = new TemplateDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_templateDef);
		try {
			setState(153);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(131); match(AT);
					setState(132); _localctx.enclosing = match(ID);
					setState(133); match(DOT);
					setState(134); _localctx.name = match(ID);
					setState(135); match(LPAREN);
					setState(136); match(RPAREN);
					}
					break;

				case 2:
					{
					setState(137); _localctx.name = match(ID);
					setState(138); match(LPAREN);
					setState(139); formalArgs();
					setState(140); match(RPAREN);
					}
					break;
				}
				setState(144); match(DEFINED);
				setState(148);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(145); stringTemplate();
					}
					break;

				case 2:
					{
					setState(146); bigstringTemplate();
					}
					break;

				case 3:
					{
					setState(147); bigstringTemplateNoNewline();
					}
					break;
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); _localctx.alias = match(ID);
				setState(151); match(DEFINED);
				setState(152); _localctx.target = match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalArgsContext extends ParserRuleContext<Token> {
		public List<? extends FormalArgContext> formalArg() {
			return getRuleContexts(FormalArgContext.class);
		}
		public FormalArgContext formalArg(int i) {
			return getRuleContext(FormalArgContext.class,i);
		}
		public FormalArgsContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalArgs; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterFormalArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitFormalArgs(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitFormalArgs(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final FormalArgsContext formalArgs() throws RecognitionException {
		FormalArgsContext _localctx = new FormalArgsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formalArgs);
		try {
			int _alt;
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155); formalArg();
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(156); match(COMMA);
						setState(157); formalArg();
						}
						} 
					}
					setState(162);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalArgContext extends ParserRuleContext<Token> {
		public Token name;
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode<Token> ID() { return getToken(TemplateParser.ID, 0); }
		public TerminalNode<Token> FALSE() { return getToken(TemplateParser.FALSE, 0); }
		public TerminalNode<Token> TRUE() { return getToken(TemplateParser.TRUE, 0); }
		public AnonymousTemplateContext anonymousTemplate() {
			return getRuleContext(AnonymousTemplateContext.class,0);
		}
		public FormalArgContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalArg; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterFormalArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitFormalArg(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitFormalArg(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final FormalArgContext formalArg() throws RecognitionException {
		FormalArgContext _localctx = new FormalArgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formalArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); _localctx.name = match(ID);
			setState(174);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(167); match(EQUALS);
				setState(172);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(168); string();
					}
					break;

				case 2:
					{
					setState(169); anonymousTemplate();
					}
					break;

				case 3:
					{
					setState(170); match(TRUE);
					}
					break;

				case 4:
					{
					setState(171); match(FALSE);
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DictDefContext extends ParserRuleContext<Token> {
		public Token name;
		public DictContext dict() {
			return getRuleContext(DictContext.class,0);
		}
		public TerminalNode<Token> ID() { return getToken(TemplateParser.ID, 0); }
		public DictDefContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dictDef; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterDictDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitDictDef(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitDictDef(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final DictDefContext dictDef() throws RecognitionException {
		DictDefContext _localctx = new DictDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_dictDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); _localctx.name = match(ID);
			setState(177); match(DEFINED);
			setState(178); dict();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DictContext extends ParserRuleContext<Token> {
		public DictPairsContext dictPairs() {
			return getRuleContext(DictPairsContext.class,0);
		}
		public DictContext(ParserRuleContext<Token> parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dict; }
		@Override
		public void enterRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).enterDict(this);
		}
		@Override
		public void exitRule(ParseTreeListener<? super Token> listener) {
			if ( listener instanceof TemplateParserListener ) ((TemplateParserListener)listener).exitDict(this);
		}
		@Override
		public <Result> Result accept(ParseTreeVisitor<? super Token, ? extends Result> visitor) {
			if ( visitor instanceof TemplateParserVisitor<?, ?> ) return ((TemplateParserVisitor<? super Token, ? extends Result>)visitor).visitDict(this);
			else return null;
		}
	}

	@RuleVersion(0)
	public final DictContext dict() throws RecognitionException {
		DictContext _localctx = new DictContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_dict);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); match(LBRACK);
			setState(181); dictPairs();
			setState(182); match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
